# sistemasembebidos

./: .gitignore  CMakeLists.txt  README.md  hello_world.c  led_blinky.c  link.ld  main.c  makefile  pin_mux_hello.c  pin_mux_led.c  reverse_int.s  startup.c
FreeRTOS/: event_groups.c  fsl_tickless_generic.h  fsl_tickless_lptmr.c  fsl_tickless_systick.c  heap_1.c  list.c  port.c  queue.c  stream_buffer.c  tasks.c  timers.c
FreeRTOS/no/: heap_2.c  heap_3.c  heap_4.c  heap_5.c
drivers/: MKL46Z4.h  MKL46Z4_features.h  board.c  board.h  clock_config.c  fsl_assert.c  fsl_clock.c  fsl_clock.h  fsl_common.c  fsl_common.h  fsl_debug_console.c  fsl_debug_console.h  fsl_device_registers.h  fsl_flash.h  fsl_ftfx_cache.c  fsl_ftfx_cache.h  fsl_ftfx_controller.c  fsl_ftfx_controller.h  fsl_ftfx_features.h  fsl_ftfx_flash.c  fsl_ftfx_flash.h  fsl_ftfx_flexnvm.h  fsl_gpio.c  fsl_gpio.h  fsl_i2c.c  fsl_i2c.h  fsl_io.c  fsl_io.h  fsl_log.c  fsl_lpsci.c  fsl_lpsci.h  fsl_port.h  fsl_smc.c  fsl_smc.h  fsl_str.c  fsl_tsi_v4.c  fsl_tsi_v4.h  fsl_uart.c  fsl_uart.h  lcd.c  (+6 more)
drivers_EMB/: lcd.c
drivers_ENS/: My_Div2.s  lcd.c
include/: FreeRTOS.h  FreeRTOSConfig.h  deprecated_definitions.h  event_groups.h  freertos_tasks_c_additions.h  list.h  mpu_wrappers.h  portable.h  portmacro.h  projdefs.h  queue.h  stack_macros.h  stream_buffer.h  task.h  timers.h
includes/: lcd.h
